Sync all content

--- a/content/resources/11.md
+++ b/content/resources/11.md
@@ -4,6 +4,8 @@ description: Digital media on the sidewalk in Shanghai.
 file: /courses/11-307-beijing-urban-design-studio-summer-2006/22a83845faa5973d5d9d823b35e3a40b_11.jpg
 file_size: 121574
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Digital media on the sidewalk in Shanghai.
   credit: 'Credit: Image courtesy of Albert Wei.'
