--- a/content/resources/19.md
+++ b/content/resources/19.md
@@ -4,6 +4,8 @@ description: The Great Wall, shrouded in fog.
 file: /courses/11-307-beijing-urban-design-studio-summer-2006/3e5ad530a7ff56d45010ea43990d4f21_19.jpg
 file_size: 59272
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: The Great Wall, shrouded in fog.
   credit: 'Credit: Image courtesy of Albert Wei.'
