--- a/content/resources/2.md
+++ b/content/resources/2.md
@@ -4,6 +4,8 @@ description: Monks at work in their temple.
 file: /courses/11-307-beijing-urban-design-studio-summer-2006/a32cb4c34db851622e45d07b0f007f0a_2.jpg
 file_size: 110186
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Monks at work in their temple.
   credit: 'Credit: Image courtesy of Albert Wei.'
