--- a/content/resources/5.md
+++ b/content/resources/5.md
@@ -4,6 +4,8 @@ description: Standing at the temple gate.
 file: /courses/11-307-beijing-urban-design-studio-summer-2006/5f8f02c1dd271d63321ffcb0f608e628_5.jpg
 file_size: 88231
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Standing at the temple gate.
   credit: 'Credit: Image courtesy of Albert Wei.'
