--- a/content/resources/7.md
+++ b/content/resources/7.md
@@ -4,6 +4,8 @@ description: Graffitti in Shanghai.
 file: /courses/11-307-beijing-urban-design-studio-summer-2006/24ceedfdb83285e29283eb35f73a1e3e_7.jpg
 file_size: 60871
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Graffitti in Shanghai.
   credit: 'Credit: Image courtesy of Albert Wei.'
