--- a/content/resources/9.md
+++ b/content/resources/9.md
@@ -4,6 +4,8 @@ description: Shanghai at night.
 file: /courses/11-307-beijing-urban-design-studio-summer-2006/8edd4c2627ccb19c65becd71d0d51cf4_9.jpg
 file_size: 119135
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Shanghai at night.
   credit: 'Credit: Image courtesy of Albert Wei.'
