--- a/content/resources/11-307su06.md
+++ b/content/resources/11-307su06.md
@@ -6,6 +6,8 @@ description: One of the final presentation boards from the class showing the pro
 file: /courses/11-307-beijing-urban-design-studio-summer-2006/2d9bd8cd59cea6345a124694c318e43a_11-307su06.jpg
 file_size: 116727
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: One of the final presentation boards from the class showing the proposed
     design of Group C. (Image courtesy of Angela Meehan, Feifei Zhao, Shilpa Mehta,
