--- a/content/resources/16.md
+++ b/content/resources/16.md
@@ -4,6 +4,8 @@ description: The World Cup in China.
 file: /courses/11-307-beijing-urban-design-studio-summer-2006/3a6c7861ba2d9edd5d38710f950b3356_16.jpg
 file_size: 90442
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: The World Cup in China.
   credit: 'Credit: Image courtesy of Albert Wei.'
