--- a/content/resources/22.md
+++ b/content/resources/22.md
@@ -4,6 +4,8 @@ description: An art class along the canal.
 file: /courses/11-307-beijing-urban-design-studio-summer-2006/9ff57f2a4168c118543a9a12644e1e38_22.jpg
 file_size: 99551
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: An art class along the canal.
   credit: 'Credit: Image courtesy of Albert Wei.'
