--- a/content/resources/24.md
+++ b/content/resources/24.md
@@ -4,6 +4,8 @@ description: More of the final evening.
 file: /courses/11-307-beijing-urban-design-studio-summer-2006/341b20f7c8ba5dda139da61db3b333f1_24.jpg
 file_size: 94294
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: More of the final evening.
   credit: 'Credit: Image courtesy of Albert Wei.'
